# HA

./: .gitignore  DISTORTION_FIXES.md  README.md  STACK_LABELS.md  audio_io.py  config.py  content.txt  cpp_bridge.py  fix_server.py  main.py  processing.py  run_cpp_realtime_pi.sh  run_pi_bridge.sh  run_pi_full.sh  run_pi_hybrid.sh  run_python_app.bat  run_python_cpp_bridge.bat  server.py  setup_pi.sh  stt.py
cpp/: CMakeLists.txt  hearing_aid_realtime.cpp
templates/: index.html
